--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -13,3 +13,10 @@ body {
     border-radius: 5px;
     padding: 5px;
 }
+
+.landing-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10vh;
+}
