--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -1,3 +1,24 @@
+.game-modal {
+    display: none;
+    background: white;
+    width: 70vh;
+    border-radius: 10px;
+    margin: 10px;
+    align-content: space-around;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.game-header {
+    display: flex;
+}
+
+.num-question {
+    margin-left: 5px;
+}
+
 .container {
   display: block;
   position: relative;
