--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -22,7 +22,7 @@
 .container {
   display: block;
   position: relative;
-  padding-left: 35px;
+  padding: 5px 5px 5px 40px;
   margin-bottom: 12px;
   cursor: pointer;
   font-size: 22px;
@@ -30,6 +30,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  border-radius: 5px;
 }
 
 .container input {
@@ -46,6 +47,7 @@
   width: 25px;
   background-color: #eee;
   border-radius: 50%;
+  margin: 5px;
 }
 
 .container:hover input ~ .checkmark {
