--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -20,10 +20,11 @@
 }
 
 .container {
-  display: block;
+  display: inline-block;
   position: relative;
   padding: 5px 5px 5px 40px;
   margin-bottom: 12px;
+  margin-left: 45px;
   cursor: pointer;
   font-size: 22px;
   -webkit-user-select: none;
@@ -31,6 +32,7 @@
   -ms-user-select: none;
   user-select: none;
   border-radius: 5px;
+  width: 10em;
 }
 
 .container input {
