--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -20,7 +20,7 @@
 
 .fa-paper-plane,
 .fa-map-marked-alt {
-    font-size: 200px;
+    font-size: 13vw;
     color: rgb(101, 171, 251);
     margin: 20px;
 }
@@ -31,12 +31,19 @@
     align-items: center;
     flex-direction: column;
     margin: 20px;
+    font-size: 3vw;
+    height: 100%;
+}
+
+.landing-subtitle {
+    margin-top: 5px;
+    font-size: 1vw;
 }
 
 .startGame,
 .restartGame {
     background: none;
-    font-size: 30px;
+    font-size: 2vw;
     padding: 5px;
     margin-top: 20px;
     width: 80%;
@@ -49,4 +56,124 @@
     background: rgb(101, 171, 251);
     color: white;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 1100px) {
+    .fa-paper-plane,
+    .fa-map-marked-alt {
+        font-size: 18vw;
+    }
+
+    .right-section {
+        font-size: 4vw;
+    }
+
+    .landing-subtitle {
+        font-size: 2vw;
+    }
+
+    .startGame,
+    .restartGame {
+        font-size: 2vw;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .fa-paper-plane,
+    .fa-map-marked-alt {
+        font-size: 20vw;
+    }
+
+    .right-section {
+        font-size: 5vw;
+    }
+
+    .landing-subtitle {
+        font-size: 2vw;
+    }
+
+    .startGame,
+    .restartGame {
+        font-size: 3vw;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .fa-paper-plane,
+    .fa-map-marked-alt {
+        font-size: 25vw;
+    }
+
+    .right-section {
+        font-size: 9vw;
+    }
+
+    .landing-subtitle {
+        font-size: 4vw;
+    }
+
+    .startGame,
+    .restartGame {
+        font-size: 8vw;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .fa-paper-plane,
+    .fa-map-marked-alt {
+        font-size: 25vw;
+    }
+
+    .right-section {
+        font-size: 8vw;
+    }
+
+    .landing-subtitle {
+        font-size: 4vw;
+    }
+
+    .startGame,
+    .restartGame {
+        font-size: 7vw;
+    }
+}
+
+@media only screen and (max-height: 750px) {
+    .fa-paper-plane,
+    .fa-map-marked-alt {
+        font-size: 10vw;
+    }
+
+    .right-section {
+        font-size: 2vw;
+    }
+
+    .landing-subtitle {
+        font-size: 1vw;
+    }
+
+    .startGame,
+    .restartGame {
+        font-size: 1vw;
+    }
+}
+
+@media only screen and (max-height: 750px) and (max-width: 550px){
+    .fa-paper-plane,
+    .fa-map-marked-alt {
+        font-size: 20vw;
+    }
+
+    .right-section {
+        font-size: 8vw;
+    }
+
+    .landing-subtitle {
+        font-size: 4vw;
+    }
+
+    .startGame,
+    .restartGame {
+        font-size: 5vw;
+    }
 }
