Adjust content for mobile use

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -78,3 +78,9 @@
 	border-radius: 50%;
 	background: white;
 }
+
+@media only screen and (max-width: 450px) {
+    .container {
+        margin-left: 20px;
+    }
+}
