--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -125,6 +125,7 @@
     }
 
     .right-section {
+        margin-top: 0;
         font-size: 8vw;
     }
 
@@ -135,6 +136,10 @@
     .startGame,
     .restartGame {
         font-size: 7vw;
+    }
+
+    .end-game-modal {
+        flex-direction: column;
     }
 }
 
