--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -1,7 +1,7 @@
 .game-modal {
     display: none;
     background: white;
-    width: 70vh;
+    width: 100vh;
     border-radius: 10px;
     margin: 10px;
     align-content: space-around;
@@ -32,7 +32,7 @@
   -ms-user-select: none;
   user-select: none;
   border-radius: 5px;
-  width: 10em;
+  width: 16em;
 }
 
 .container input {
@@ -82,5 +82,10 @@
 @media only screen and (max-width: 450px) {
     .container {
         margin-left: 20px;
+        width: 10em;
+    }
+
+    .game-modal {
+        width: 45vh;
     }
 }
