--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -53,7 +53,7 @@
 }
 
 .nextOne {
-    width: 50%;
+    width: 40%;
 }
 
 .startGame:hover,
@@ -124,6 +124,10 @@
     .restartGame,
     .nextOne {
         font-size: 8vw;
+    }
+    
+    .nextOne {
+        width: 50%;
     }
 }
 
