--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -17,6 +17,11 @@
 
 .num-question {
     margin-left: 5px;
+    font-family: 'Pacifico', cursive;
+}
+
+.question-prompt {
+    font-family: 'Roboto', sans-serif;
 }
 
 .container {
@@ -33,6 +38,7 @@
   user-select: none;
   border-radius: 5px;
   width: 16em;
+  font-family: 'Roboto', sans-serif;
 }
 
 .container input {
@@ -77,6 +83,10 @@
 	height: 8px;
 	border-radius: 50%;
 	background: white;
+}
+
+.end-text {
+    font-family: 'Roboto', sans-serif;
 }
 
 @media only screen and (max-width: 450px) {
